# question-bank

./: README.md  pyproject.toml  question_bank.json
src/question_bank/: crew.py  main.py
src/question_bank/config/: agents.yaml  tasks.yaml
