[project]
name = "question_bank"
version = "0.1.0"
description = "question-bank using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.105.0,<1.0.0"
]

[project.scripts]
question_bank = "question_bank.main:run"
run_crew = "question_bank.main:run"
train = "question_bank.main:train"
replay = "question_bank.main:replay"
test = "question_bank.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
